--- a/styles/main.css
+++ b/styles/main.css
@@ -8,14 +8,34 @@
 }
 
 html,
-body,
-table {
+body {
     width: 100%;
     height: 100%;
 }
 
-td {
+body {
+    display: flex;
+    flex-direction: row;
+}
+
+body>div {
+    display: flex;
+    flex-direction: column;
     padding: 1em;
+    width: max-content;
+}
+
+#l,
+#r {
+    width: 100%;
+}
+
+#m>h3 {
+    width: max-content;
+}
+
+h3 {
+    text-align: center;
 }
 
 textarea {
@@ -28,7 +48,7 @@ textarea {
 button {
     display: block;
     width: 100%;
-    margin: 1em 0;
+    margin: 0.5em 0;
     padding: 0.25em;
     background: #369;
     color: white;
@@ -42,6 +62,15 @@ button:hover {
 
 button:active {
     background: #258;
+}
+
+p[title=Version] {
+    font-size: 0.5em;
+    padding: 0.25em;
+    margin: 0;
+    position: fixed;
+    bottom: 0;
+    right: 0;
 }
 
 @media (prefers-color-scheme:dark) {
