--- a/styles/main.css
+++ b/styles/main.css
@@ -43,6 +43,8 @@ textarea {
     width: 100%;
     height: 100%;
     resize: none;
+    background: white;
+    border: 1px solid #666;
 }
 
 button {
@@ -62,6 +64,12 @@ button:hover {
 
 button:active {
     background: #258;
+}
+
+#statusbar {
+    background: #666;
+    font-family: monospace;
+    padding: 0 0.25em;
 }
 
 p[title=Version] {
