--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,7 @@ button:active {
     background: #258;
 }
 
-#statusbar {
+div.statusbar {
     background: #666;
     font-family: monospace;
     padding: 0 0.25em;
